--- a/_project/footer.html
+++ b/_project/footer.html
@@ -4,6 +4,12 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <!-- Plyr.io -->
 <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+<!-- DrawSVGPlugin -->
+<script src="https://joinamply.github.io/catch-release/DrawSVGPlugin.min.js"></script>
+
+<script>
+    gsap.registerPlugin(DrawSVGPlugin)
+</script>
 
 <!-- Navbar -->
 <script>
@@ -129,14 +135,14 @@
         $(thumbPlayers[index])[0].stop();
     });
 
-    function playThumbPlyr(plyrWrap, index) {        
+    function playThumbPlyr(plyrWrap, index) {
         let thumbPlayer = $(thumbPlayers[index])[0];
         thumbPlayer.volume = 0;
         thumbPlayer.muted = true;
         thumbPlayer.loop = true;
         let promise = thumbPlayer.play();
 
-        if(gsap.isTweening(plyrWrap)) {
+        if (gsap.isTweening(plyrWrap)) {
             gsap.killTweensOf(plyrWrap);
         }
         gsap.to(plyrWrap, { opacity: 1, duration: 0.3 });
@@ -152,26 +158,15 @@
     }
 
     function stopThumbPlyr(plyrWrap, index) {
-        if(gsap.isTweening(plyrWrap)) {
+        if (gsap.isTweening(plyrWrap)) {
             gsap.killTweensOf(plyrWrap);
         }
-        gsap.to(plyrWrap, { opacity: 0, duration: 0.3, onComplete: () => {
-            $(thumbPlayers[index])[0].stop();
-        } });
+        gsap.to(plyrWrap, {
+            opacity: 0, duration: 0.3, onComplete: () => {
+                $(thumbPlayers[index])[0].stop();
+            }
+        });
     }
-
-
-    // $('.video-slide_layout').on('mouseenter', function () {
-    //     $(this).find('.thumb-plyr_wrap').css('opacity', '1');
-    //     let thumbPlyrIndex = $(this).find('.thumb-plyr_wrap').attr('thumb-plyr');
-    //     playThumbPlyr(thumbPlyrIndex);
-    // });
-
-    // $('.video-slide_layout').on('mouseleave', function () {
-    //     $(this).find('.thumb-plyr_wrap').css('opacity', '0');
-    //     let thumbPlyrIndex = $(this).find('.thumb-plyr_wrap').attr('thumb-plyr');
-    //     stopThumbPlyr(thumbPlyrIndex);
-    // });
 </script>
 
 <!-- Swiper Slider -->
@@ -269,4 +264,157 @@
 
     // Change all slides roles to prevent an accessibility issue
     $(".swiper-slide").attr("role", "listitem");
+</script>
+
+<!-- Animated Line -->
+<script>
+    $('.animated-line_component').each(function () {
+        $(this).find('.animated-line_wrap').each(function () {
+            let circle = $(this).find('[animated-line="circle"]');
+            let line = $(this).find('[animated-line="line"]');
+            let end = $(this).find('[animated-line="end"]');
+            let text = $(this).find('[animated-line="text"]');
+            let animatedLineTl = gsap.timeline({
+                paused: true,
+                scrollTrigger: {
+                    trigger: $(this),
+                    start: "bottom bottom",
+                    end: "+=0",
+                    markers: false,
+                }
+            });
+
+            animatedLineTl.from(circle, { opacity: 0, duration: 0.3, delay: 0.5 })
+                .from(line, { drawSVG: "0%", duration: 0.5 }, ',-=0.15')
+                .from(end, { scale: 0, opacity: 0, transformOrigin: "center", duration: 0.3 })
+                .from(text, { opacity: 0, duration: 0.3 });
+        });
+
+        gsap.to(".animated-line", {
+            duration: 1,
+            drawSVG: "0% 100%",
+            ease: "power2.inOut",
+            scrollTrigger: {
+                trigger: ".animated-line_wrap",
+                start: "bottom 90%",
+                end: "+=0",
+                scrub: true,
+            },
+        });
+    });
+</script>
+
+<!-- Accordion Automatic -->
+<style>
+    .accordion-automatic_description-wrap {
+        height: 0rem;
+    }
+</style>
+
+<script>
+    $(".accordion-automatic-list").each(function () {
+        let items = $(this).find(".accordion-automatic");
+        let layout = $(this).find(".accordion-automatic_description-wrap");
+        let currentItem = 0;
+        let progressFill;
+        let timerStarted = false;
+        let matchMedia = gsap.matchMedia();
+        let isMobile = false;
+        // If not first remove the active class
+        items.removeClass("is-active");
+        items.eq(currentItem).addClass("is-active");
+        gsap.set(items.eq(currentItem).find(".accordion-automatic_description-wrap"), { height: "auto" });
+        // gsap.set(items.eq(currentItem).find(".content-accordion-item_icon-wrapper"), { rotationZ: "45" });
+
+        items.on("click", function () {
+            if ($(this).hasClass("is-active")) return;
+            changeActiveItem($(this).index());
+            pauseTimer();
+        });
+
+        items.on("mouseenter", function () {
+            if (!$(this).hasClass("is-active")) return;
+            pauseTimer();
+        });
+        items.on("mouseleave", function (index) {
+            startTimer();
+        });
+
+        function changeActiveItem(index) {
+            items.removeClass("is-active");
+            gsap.to(items.eq(currentItem).find(".accordion-automatic_description-wrap"), { height: "0rem", duration: 0.5, ease: "power2.out" });
+            // gsap.to(items.eq(currentItem).find(".content-accordion-item_icon-wrapper"), { rotationZ: "0", duration: 0.5, ease: "power2.out" });
+            items.eq(index).addClass("is-active");
+            currentItem = index;
+            gsap.to(items.eq(currentItem).find(".accordion-automatic_description-wrap"), { height: "auto", duration: 0.5, ease: "power2.out" });
+            // gsap.to(items.eq(currentItem).find(".content-accordion-item_icon-wrapper"), { rotationZ: "45", duration: 0.5, ease: "power2.out" });
+        }
+
+        // To prevent the page from jump the timer will just start when the section scrolls into view
+        ScrollTrigger.create({
+            trigger: $(this),
+            start: "top bottom",
+            end: "bottom center",
+            markers: false,
+            onEnter: () => {
+                startTimer();
+            },
+            onEnterBack: () => {
+                startTimer();
+            },
+            onLeave: () => {
+                pauseTimer();
+            },
+            onLeaveBack: () => {
+                pauseTimer();
+            },
+        });
+
+        // Timer
+        function startTimer() {
+            if (timerStarted || isMobile) return;
+            timerStarted = true;
+            progressFill = items.eq(currentItem).find(".accordion-automatic_progress-fill");
+            gsap.fromTo(progressFill, { width: "0%" }, { width: "100%", duration: 20, ease: "none", onComplete: nextItem });
+        }
+        function nextItem() {
+            let nextItem = currentItem + 1;
+            if (nextItem >= items.length) nextItem = 0;
+            changeActiveItem(nextItem);
+            timerStarted = false;
+            startTimer();
+        }
+        function pauseTimer() {
+            timerStarted = false;
+            gsap.killTweensOf(progressFill);
+        }
+
+        // Media Query
+        matchMedia.add("(min-width: 992px)", () => {
+            isMobile = false;
+            startTimer();
+        });
+
+        matchMedia.add("(max-width: 991px)", () => {
+            isMobile = true;
+            pauseTimer();
+        });
+    });
+</script>
+
+<!-- Inline Player -->
+<script>
+    let config = Plyr.setup(('.plyr-inline_video'), {
+        controls: ['play', 'progress', 'current-time', 'mute', 'fullscreen'],
+        blankVideo: "https://cdn.plyr.io/static/blank.mp4",
+        // Disable on mobile
+        enabled: !/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent),
+        resetOnEnd: false
+    });
+    config.muted = false;
+    config.volume = 1;
+    // Hide thumbnail on click
+    $('.inline-plyr').on('click', function () {
+        gsap.to('.inline-plyr_thumbnail-wrap', { opacity: 0, duration: 0.3 });
+    });
 </script>
