--- a/_project/am-settings.html
+++ b/_project/am-settings.html
@@ -167,3 +167,16 @@ am-ease="expo.out"
 am-timeline-position="<"
 am-opacity="0"
 >
+
+<!-- Header 3 -->
+<meta am-group-settings="header-3"
+>
+<meta am-element-settings="header-3"
+am-split-into="elements"
+am-stagger-amount="1"
+am-stagger-from="random"
+am-opacity="0"
+am-duration="1"
+am-position-y="50%"
+am-ease="back.out(2)"
+>
