--- a/_styles/global.html
+++ b/_styles/global.html
@@ -225,4 +225,8 @@
     [theme="dark"] .licensable-search_input-field:focus {
         border-color: var(--color-neutral--white-60);
     }
+
+    [theme="dark"] .video-campaign_company-image {
+        filter: brightness(2000%);
+    }
   </style>
