--- a/features-overview.html
+++ b/features-overview.html
@@ -25,7 +25,7 @@
 
             ScrollTrigger.create({
                 trigger: this,
-                start: 'center bottom',
+                start: 'top 80%',
                 end: 'bottom bottom',
                 markers: false,
                 onEnter: () => {
