--- a/_styles/global.html
+++ b/_styles/global.html
@@ -227,6 +227,6 @@
     }
 
     [theme="dark"] .video-campaign_company-image {
-        filter: brightness(2000%);
+        filter: invert(100%);
     }
   </style>
