--- a/features-overview.html
+++ b/features-overview.html
@@ -13,7 +13,7 @@
     function flip(destination, rotX, rotY, rotZ) {
         let state = Flip.getState(imageToFlip);
         imageToFlip.appendTo(destination);
-        Flip.from(state, { duration: 0.6, ease: 'back.inOut(2)' });
+        Flip.from(state, { duration: 0.6, ease: 'expo.out' });
         gsap.to(imageToRotate, { rotationX: rotX, rotationY: rotY, rotationZ: rotZ, duration: 0.5 });
     }
 
