--- a/_project/head.html
+++ b/_project/head.html
@@ -25,3 +25,10 @@
 
 <!-- Plyr.io style library -->
 <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+
+<!-- Automatic Accordion -->
+<style>
+    .accordion-automatic_description-wrap {
+        height: 0rem;
+    }
+</style>
