--- a/_project/footer.html
+++ b/_project/footer.html
@@ -7,7 +7,7 @@
 <!-- DrawSVGPlugin -->
 <script src="https://joinamply.github.io/catch-release/DrawSVGPlugin.min.js"></script>
 <!-- Project Code -->
-<script src="https://cdn.jsdelivr.net/gh/joinamply/catch-release@latest/_project/footer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/joinamply/catch-release/_project/footer.min.js"></script>
 
 <script>
     gsap.registerPlugin(DrawSVGPlugin)
