--- a/_styles/components.html
+++ b/_styles/components.html
@@ -20,7 +20,7 @@
             font-size: 0.75rem;
         }
 
-        .button.is-navbar {
+        .m-button.is-navbar {
             padding: 0.3rem 1rem;
             font-size: 0.75rem;
         }
@@ -45,11 +45,11 @@
 
 <!-- Button Rouned -->
 <style>
-    .button.is-rounded.is-small .button-rounded_icon {
+    .m-button.is-rounded.is-small .m-button-rounded_icon {
         height: var(--size-icon--xxsmall);
     }
 
-    .button.is-rounded.is-tiny .button-rounded_icon {
+    .m-button.is-rounded.is-tiny .m-button-rounded_icon {
         height: var(--size-icon--tiny);
     }
 </style>
