--- a/_styles/global.html
+++ b/_styles/global.html
@@ -204,7 +204,7 @@
         --body--bg-color: var(--color-neutral--black);
     }
 
-    [theme="dark"] .button {
+    [theme="dark"] .m-button {
         filter: invert(100%);
     }
 
