--- a/_styles/global.html
+++ b/_styles/global.html
@@ -58,6 +58,22 @@
         -moz-appearance: none;
         appearance: none;
     }
+
+    /* Remove the blue color from the ionput when it gets autofilled */
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus,
+    select:-webkit-autofill,
+    select:-webkit-autofill:hover,
+    select:-webkit-autofill:focus {
+        -webkit-text-fill-color: var(--body--accent-font-color) !important;
+        -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+        box-shadow: 0 0 0px 1000px transparent inset;
+        transition: background-color 5000s ease-in-out 0s;
+    }
 </style>
 
 <!-- Amply Editor -->
@@ -69,10 +85,27 @@
 
 <!-- Fluid Design -->
 <style>
-    html { font-size: 1.125rem; }
-    @media screen and (max-width:1920px) { html { font-size: calc(0.3749999999999999rem + 0.6250000000000001vw); } }
-    @media screen and (max-width:1440px) { html { font-size: calc(0.6565426638917794rem + 0.3121748178980229vw); } }
-    @media screen and (max-width:479px) { html { font-size: calc(0.7494769874476988rem + 0.8368200836820083vw); } }
+    html {
+        font-size: 1.125rem;
+    }
+
+    @media screen and (max-width:1920px) {
+        html {
+            font-size: calc(0.3749999999999999rem + 0.6250000000000001vw);
+        }
+    }
+
+    @media screen and (max-width:1440px) {
+        html {
+            font-size: calc(0.6565426638917794rem + 0.3121748178980229vw);
+        }
+    }
+
+    @media screen and (max-width:479px) {
+        html {
+            font-size: calc(0.7494769874476988rem + 0.8368200836820083vw);
+        }
+    }
 </style>
 
 <!-- Plyr.io -->
@@ -146,7 +179,7 @@
 </style>
 
 <!-- Headings -->
- <style>
+<style>
     h1 strong,
     h2 strong,
     h3 strong,
@@ -156,40 +189,51 @@
         opacity: 0.6;
     }
 
-    h1 sup, .heading-style-h1 sup {
+    h1 sup,
+    .heading-style-h1 sup {
         font-size: calc(var(--h1--font-size) - 50%);
         top: -0.25rem;
         vertical-align: super;
     }
-    h2 sup, .heading-style-h2 sup {
+
+    h2 sup,
+    .heading-style-h2 sup {
         font-size: calc(var(--h2--font-size) - 50%);
         top: -0.25rem;
         vertical-align: super;
     }
-    h3 sup, .heading-style-h3 sup {
+
+    h3 sup,
+    .heading-style-h3 sup {
         font-size: calc(var(--h3--font-size) - 50%);
         top: -0.25rem;
         vertical-align: super;
     }
-    h4 sup, .heading-style-h4 sup {
+
+    h4 sup,
+    .heading-style-h4 sup {
         font-size: calc(var(--h4--font-size) - 50%);
         top: -0.25rem;
         vertical-align: super;
     }
-    h5 sup, .heading-style-h5 sup {
+
+    h5 sup,
+    .heading-style-h5 sup {
         font-size: calc(var(--h5--font-size) - 50%);
         top: -0.25rem;
         vertical-align: super;
     }
-    h6 sup, .heading-style-h6 sup {
+
+    h6 sup,
+    .heading-style-h6 sup {
         font-size: calc(var(--h6--font-size) - 50%);
         top: -0.25rem;
         vertical-align: super;
     }
- </style>
+</style>
 
- <!-- Dark Theme -->
-  <style>
+<!-- Dark Theme -->
+<style>
     [theme="dark"] {
         background-color: var(--color-neutral--black);
         --h1--font-color: var(--color-neutral--white);
@@ -229,4 +273,4 @@
     [theme="dark"] .video-campaign_company-image {
         filter: invert(100%);
     }
-  </style>
+</style>
